# bpm_detect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  hades.py  hades_ui.py  pyproject.toml  requirements.txt
bpm_detect/: __init__.py  get_downloads_dir.py  hades_ui.py  main.py  validators.py
